--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,28 @@ main {
 
 footer {
   padding: 20px 0; /* Espaciado para el footer */
+  background-color: #050811;
 }
 
-h1{
+h1 {
   padding-top: 2rem;
-  font-size: 3rem;
+  font-size: 3.5rem;
   letter-spacing: 4px;
   font-weight: bolder;
-  color: #e5602f;
+  color: #e5602f; /* Color del texto */
+  text-align: center; /* Centrar el texto */
+  text-shadow: 
+      2px 2px 0px rgba(0, 0, 0, 0.5),  /* Sombra negra para dar profundidad */
+      3px 3px 5px rgba(0, 0, 0, 0.7),  /* Sombra más difusa para un efecto de profundidad */
+      0 0 20px rgba(255, 255, 255, 0.3), /* Resplandor suave en blanco */
+      0 0 30px rgba(229, 96, 47, 0.8), /* Resplandor en el mismo tono con más intensidad */
+      0 0 40px rgba(229, 96, 47, 0.5); /* Resplandor más difuso */
+  transition: transform 0.3s ease; /* Efecto de transición suave */
+}
+
+h1:hover {
+  transform: scale(1.05); /* Aumentar ligeramente el tamaño al pasar el ratón */
+  color: #ff8c5a; /* Cambiar a un tono más claro al pasar el ratón */
 }
 
 h2{
