Actualizar styleMuertos.css

--- a/css/styleMuertos.css
+++ b/css/styleMuertos.css
@@ -10,7 +10,7 @@ body {
 h2 {
     padding-top: 2.5rem;
     font-size: 3rem;
-    color: #c42da9; /* Color del texto */
+    color: #018FC7; /* Color del texto */
     text-align: center; /* Centrar el texto */
     padding-bottom: 1.5rem;
     text-shadow: 
